# website

./: build-timestamp.txt  index.html  last-deploy.txt  v2.html
Backups/10-02-26/1314/edge-demo/: styles.css
Backups/10-02-26/1314/flow/: index.v2.html
Backups/10-02-26/1314/mind-tauri/: Cargo.toml  README.md  tauri.conf.json
Backups/11-02-26/0832/: index.html.newdesign
Backups/11-02-26/0944/: index-apple-style.html
Backups/11-02-26/1249/edge-demo/: index.html
Backups/11-02-26/1251/edge-demo/: app.js
Backups/11-02-26/1254/flow-demo/: index.html
Backups/11-02-26/1421/lens-demo/: index.html
Backups/11-02-26/1510/mission-control/: data.json
Backups/11-02-26/1527/mind/: index.html
Backups/11-02-26/1830/mission-control/: index.html
Backups/11-02-26/1918/flow-demo/: index.html.backup-20260207-101407
Backups/11-02-26/1931/edge-demo/: README.md
Backups/11-02-26/2012/flow/: index.html
Backups/11-02-26/2019/: index.html
Backups/13-02-26/1602/: index.html
about/: index.html
edge-demo-backup-20260207-101424/: mistakes.js  storage.js
edge-demo-backup-20260207-101424/js/: storage.js
edge-demo/js/: app.js
flow/: index.html
flow-demo/: index.html
flow-demo/css/: styles.css
flow-demo/js/: app.js
mind/: index.html
mind-demo/: index.html  index.html.single
mind-demo/css/: styles.css
mind-demo/js/: app.js
mind-demo/js/components/: ai.js  editor.js  sidebar.js
mind-demo/js/core/: app.js
mind-demo/js/utils/: helpers.js  storage.js
mission-control/: data.json  index.html
resolve/: index.html
(+23 files in other folders)
